route-tables/foo-vs-petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
       - prefix: '/foo'
      delegateAction:
        selector:
          labels:
            routes: petstore
          namespaces:
          - gloo-system
